--- a/docker/config.json
+++ b/docker/config.json
@@ -30,8 +30,7 @@
                 "swingMode": < UINT8 >,
                 "temperatureDisplayUnits": < UINT8 >,
                 "state_cmd": "HeaterCooler.sh",
-                "polling": < POLLING>
-            
+                "polling": < POLLING>,            
              }
         ]
     }
