デベロップとの差分を作る試験

--- a/docker/config.json
+++ b/docker/config.json
@@ -31,7 +31,7 @@
                 "swingMode": < UINT8 >,
                 "temperatureDisplayUnits": < UINT8 >,
                 "state_cmd": "HeaterCooler.sh",
-                "polling": < POLLING >,            
+                "polling": < ここちがくない？>,            
              }
         ]
     }
