久しぶりのコミットで何を編集したのかわからない

--- a/fail_config.json
+++ b/fail_config.json
@@ -53,7 +53,7 @@
                     "model": "Anything",
                     "serialNumber": "12345",
                     "stateChangeResponseTime": 3,
-                    "polling" false: ,
+                    "polling":false,
                     "state_cmd": "python3 /var/lib/homebridge/node_modules/HeaterCooler.py"
                 },
                 {
